LinearMorphing.ipynb updated from Nicolo

--- a/LinearMorphing.ipynb
+++ b/LinearMorphing.ipynb
@@ -513,7 +513,8 @@
     "# model                                                                                                                                                                                        \n",
     "#inputsize = 3 # [PT1, PT2, YEAR] \n",
     "inputsize = 2 # [PT1, PT2] \n",
-    "layers    = [inputsize, 30,30, 1]\n",
+    "# layers    = [inputsize, 30,30, 1] \n",
+    "layers    = [inputsize, 30,30,30, 30, 1] \n",
     "print('Layers:')\n",
     "print(layers)\n",
     "architecture  = ''\n",
@@ -527,7 +528,7 @@
     "print('nu list')\n",
     "print(nu_string)\n",
     "plot = True\n",
-    "total_epochs      = 1000\n",
+    "total_epochs      = 1000 #The number of epochs is a hyperparameter that defines how many times the learning algorithm will work through the entire training dataset\n",
     "patience          = 100\n",
     "wc                = 10\n",
     "L2                = None\n",
@@ -1121,7 +1122,7 @@
     "    loss = np.array([])\n",
     "    pars = np.array([])\n",
     "    train_vars = model.trainable_variables\n",
-    "    clipping = WeightClip(wc)\n",
+    "    clipping = WeightClip(wc)#???\n",
     "    #print(train_vars)\n",
     "    # Create empty gradient list (not a tf.Variable list)                                                                                                                                      \n",
     "    accum_gradient = [tf.zeros_like(this_var) for this_var in train_vars]\n",
@@ -1188,7 +1189,7 @@
     "            nu = nu_list[k]\n",
     "            nu_std = nu_list_std[k]\n",
     "            x = 0.5*(bins[1:]+bins[:-1])\n",
-    "            y = [np.log(h_list_red[k][a]/(1e-10+h_0[a])) for a in range(len(h_0))]\n",
+    "            y = [np.log(h_list_red[k][a]/(1e-10+h_0[a])) for a in range(len(h_0))] #original hists \n",
     "            ax1.plot(x, y, label=r'muon pt scale %i $\\sigma$'%(nu), color=colors[k])\n",
     "            plt.text(x=15, y=0.04-0.01*k,\n",
     "                 s=r'$\\nu_{\\rm{S}}=$ '+str(np.around(nu, 1)),\n",
@@ -1347,7 +1348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
